--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
   <body>
     <div class="container mt-5">
-
-      <form id="kwitansiForm">
+      <form id="kwitansiForm" class="col-md-6 mx-auto">
         <div class="card">
           <div class="card-header text-center">
             <h4>Form Kwitansi</h4>
@@ -101,7 +100,6 @@
           <div class="card-footer text-center">
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
-          
         </div>
       </form>
 
